Revert "Remove BLS12 from cancun (#5641)"
This reverts commit 713dc2e4a2cade3affe4b3ac7fa34b9e47eff556.