@@ -69,6 +69,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import com.google.common.io.Resources;
@@ -174,11 +175,19 @@ public abstract class MainnetProtocolSpecs {
     if (powAlgorithm == null) {
       return PoWHasher.UNSUPPORTED;
     }
-    return powAlgorithm == PowAlgorithm.ETHASH ? PoWHasher.ETHASH_LIGHT : PoWHasher.UNSUPPORTED;
+    switch (powAlgorithm) {
+      case ETHASH:
+        return PoWHasher.ETHASH_LIGHT;
+      case UNSUPPORTED:
+      default:
+        return PoWHasher.UNSUPPORTED;
+    }
   }
 
   public static BlockValidatorBuilder blockValidatorBuilder() {
-    return MainnetBlockValidator::new;
+    return (blockHeaderValidator, blockBodyValidator, blockProcessor, badBlockManager) ->
+        new MainnetBlockValidator(
+            blockHeaderValidator, blockBodyValidator, blockProcessor, badBlockManager);
   }
 
   public static ProtocolSpecBuilder homesteadDefinition(
@@ -730,7 +739,6 @@ public abstract class MainnetProtocolSpecs {
             (gasCalculator, jdCacheConfig) ->
                 MainnetEVMs.futureEips(
                     gasCalculator, chainId.orElse(BigInteger.ZERO), evmConfiguration))
-        .precompileContractRegistryBuilder(MainnetPrecompiledContractRegistries::futureEips)
         .name("FutureEips");
   }
 
@@ -862,7 +870,7 @@ public abstract class MainnetProtocolSpecs {
             IntStream.range(0, json.size())
                 .mapToObj(json::getString)
                 .map(Address::fromHexString)
-                .toList();
+                .collect(Collectors.toList());
         final WorldUpdater worldUpdater = worldState.updater();
         final MutableAccount daoRefundContract =
             worldUpdater.getOrCreate(DAO_REFUND_CONTRACT_ADDRESS).getMutable();
